Overflow for web layout corrected

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -3,7 +3,6 @@
   background-color: #343434;
   padding: 20px;
   margin-top: 60px;
-  width: 100%;
 }
 
 .footerStyled p {
